--- a/lab3/DB/docker-compose.yml
+++ b/lab3/DB/docker-compose.yml
@@ -14,10 +14,10 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   web:
-    image: python:3.11-slim
+    image: valerizab/my_flask_app
     container_name: flask_app
-    build:
-      context: ./app
+#    build:
+#      context: ./app
     command: flask run --host=0.0.0.0 --port=8080
     environment:
       FLASK_ENV: development
